--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,11 @@
-
+@font-face {
+    font-family: MyFontName;
+    src: url('./Zawgyi.ttf')
+}
+@font-face {
+    font-family: MyMM;
+    src: url('./myMM/Myanmar3-0Geo.ttf')
+}
 
 .header{
     background: #1E9FFF;
@@ -8,7 +15,7 @@
     z-index: 999;
 }
 .header_content{
-    width: 1000px;
+    width: 1100px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
@@ -35,8 +42,13 @@
     width: 46px;
     height: 46px;
 }
+/*菜单缅文太长*/
+.layui-nav-item{
+    /*width: 114px;
+    height: 60px;*/
+}
 .user{
-    width: 82px;
+    /*width: 82px;*/
     color: #f0f0f0;
     margin-right: 10px;
 }
@@ -72,8 +84,11 @@
     /*cursor: pointer;*/
 }
 .language_btn :hover{
-    background: #1cacff;
+    background: #35c2ff;
     color: #fff;
+}
+.language_btn_on{
+    background: #35c2ff;
 }
 .language_btn a{
     display: block;
@@ -123,5 +138,5 @@ body .layui-layer-my .login_input input{
     box-shadow: 0px 1px 1px #bdbdbd;
 }
 .layui-layer-dialog {
-    width: 300px;
+    width: 350px;
 }
