--- a/css/header.css
+++ b/css/header.css
@@ -35,7 +35,7 @@
     height: 100%;
     background: #575351;
     color: #e8e8e8;
-    padding:0 28px 0 10px;
+    padding:0 auto 0 10px;
     align-items: center;
 }
 .logo img{
